test/tests/compiler/6_statements_and_conditional_expressions/valid/ternary_middle_binop.plx
pub fn main(none) i32 {
    a: i32 = ? 1 then 3 % 2 else 4
    return a
}
