test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/malformed_ternary_2.plx
pub fn main(none) i32 {
    return ? 1 ? 2 then 3 else 4
}
